<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginsystem.CreateAccountActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/ic_group_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="30dp"
            android:background="@drawable/ic_create"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">
            <EditText
                android:id="@+id/inputFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:inputType="text"
                android:background="@drawable/ic_rectangle_200"/>
        <EditText
            android:id="@+id/inputMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"
            />
            <EditText
                android:id="@+id/inputLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                android:background="@drawable/ic_rectangle_200"
                />
        <EditText
            android:id="@+id/inputIDNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_number"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/ic_rectangle_200"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_200"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#FFC107"
            android:id="@+id/buttonCreateAccount"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textButtonSignIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/already_have_an_account_sign_in"/>
    </LinearLayout>
</LinearLayout>