<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogs.AddRecordDialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@color/purple_700">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_back1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/add_new_activity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <EditText
        android:id="@+id/inputActivityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_name"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/ic_rectangle_200"
        />
    <EditText
        android:id="@+id/inputActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_type"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/ic_rectangle_200"
        />
    <EditText
        android:id="@+id/inputScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Score"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="number"
        android:background="@drawable/ic_rectangle_200"
        />

    <EditText
        android:id="@+id/inputMaxScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ic_rectangle_200"
        android:hint="@string/activity_total_score"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@drawable/ic_rectangle_200"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textDateTaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_taken"
            android:layout_weight="1"
            android:textSize="14sp"
            />
        <ImageButton
            android:id="@+id/buttonDate"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_calendar"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"/>
</LinearLayout>