<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageAttendee"
            android:background="@color/black"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/class_picture" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/textStudentsFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_s_fullname"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textTimestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>