<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginsystem.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/ic_group_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="30dp"
            android:background="@drawable/ic_group_4"/>

    </FrameLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_uclicc"
        android:layout_gravity="center|bottom"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_200"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#FFC107"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:id="@+id/buttonLoginAccount"
            android:textAllCaps="false"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/don_t_have_an_account_sign_up"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect with facebook"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>





</LinearLayout>