<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".dialogs.EditProfileDialog">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUserProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:civ_border_color="#FF000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"/>
        <EditText
            android:id="@+id/inputMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputIDNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_number"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/ic_rectangle_200"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:layout_margin="10dp"/>
</LinearLayout>