<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageTeacherProfile"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="#FF000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textClassTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher_s_name"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/june_4_2023"
                android:id="@+id/textDate"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fonts_are_an_important_part_of_your_site_typography_fonts_that_are_too_fancy_can_be_hard_to_read_while_too_plain_ones_can_be_outright_boring_that_s_why_you_should_focus_on_choosing_a_font_that_s_legible_yet_appealing"
            android:id="@+id/textAtttandanceInfo"/>
        <TextView
            android:id="@+id/textAttendeesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0 attendees"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="5dp"
            android:fontFamily="@font/poppins_light"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#6C6A6A"/>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:layout_weight="1"
            android:id="@+id/buttonViewAttendees"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_document"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"/>
            <Button
                android:id="@+id/buttonTakeAttendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_camera"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>