<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogs.ChangePasswordDialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/ic_back1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="18sp"
            android:padding="10dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/change_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/inputOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"/>
        <EditText
            android:id="@+id/inputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_200"/>
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_200"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:layout_margin="10dp"/>
</LinearLayout>